cluster/home/longhorn/dashboard/default-headers.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: default-headers
  namespace: longhorn-system
spec:
  headers:
    # browserXssFilter: true
    # contentTypeNosniff: true
    # forceSTSHeader: true
    # stsIncludeSubdomains: true
    # stsPreload: true
    # stsSeconds: 15552000
    # customFrameOptionsValue: SAMEORIGIN
    customRequestHeaders:
      X-Forwarded-Proto: https
